# sidus-ai-core

./: README.md  pyproject.toml  requirements.txt
docs/: gitlab-plugin-deps-config.md  gitlab-plugin-design.md  gitlab-plugin-scope.md
samples/discord/: README.md  main.py
samples/github/: README.md  list_github_items.py
samples/gitlab/: README.md  main.py
samples/gmail/: README.md  main.py
samples/openrouter/: README.md  main.py
samples/pinecone/: README.md  main.py
sidusai/plugins/discord/: __init__.py  components.py
sidusai/plugins/github/: __init__.py  components.py  skills.py  utils.py
sidusai/plugins/gitlab/: __init__.py  components.py  skills.py
sidusai/plugins/gmail/: __init__.py  components.py  skills.py  values.py
sidusai/plugins/openrouter/: __init__.py  components.py  skills.py
sidusai/plugins/pinecone/: __init__.py  components.py  skills.py
tests/: test_gitlab_plugin.py
