[project]
name = "sidusai"
version = "0.0.1.alpha"
# ...
dependencies = [
    "networkx==3.4.2",
    "python-gitlab>=4.8.0",
]

[tool.setuptools]
packages = [
    # Core framework
    "sidusai", "sidusai.config", "sidusai.core", "sidusai.logger",
    # Default plugins
    "sidusai.plugins.deepseek", "sidusai.plugins.openai", "sidusai.plugins.transformer",
    "sidusai.plugins.ethereum", "sidusai.plugins.solana",
    "sidusai.plugins.telegram", "sidusai.plugins.twitter", "sidusai.plugins.gitlab",
    "sidusai.plugins.web"
]
